Document expert workflow for MCP

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 * text=auto
 
 # [2024-12-27] (Expert) schedule note: Harden OpenRouter integration for Expert
+
+# [2024-12-30] (MCP) schedule note: Document expert workflow for MCP
