--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,3 +12,4 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "dist"]
 } 
+# [2025-02-13] (MCP) schedule note: Document expert workflow for MCP
