Improve Task Master export for Workflow

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 OPENROUTER_API_KEY=your_actual_key_here
 
 # [2024-12-26] (OpenRouter) schedule note: Harden OpenRouter integration for OpenRouter
+
+# [2025-02-14] (Workflow) schedule note: Improve Task Master export for Workflow
