--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 # [2024-12-27] (Expert) schedule note: Harden OpenRouter integration for Expert
 
 # [2024-12-30] (MCP) schedule note: Document expert workflow for MCP
+
+# [2025-02-18] (Workflow) schedule note: Document expert workflow for Workflow
