Refine MCP prompt flow for OpenRouter

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,5 @@
 # [2024-12-30] (MCP) schedule note: Document expert workflow for MCP
 
 # [2025-02-18] (Workflow) schedule note: Document expert workflow for Workflow
+
+# [2025-03-31] (OpenRouter) schedule note: Refine MCP prompt flow for OpenRouter
