Refine MCP prompt flow for Expert

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -18,3 +18,5 @@
   }
 }
 # [2025-01-10] (Workflow) schedule note: Refine MCP prompt flow for Workflow
+
+# [2025-04-04] (Expert) schedule note: Refine MCP prompt flow for Expert
