--- a/package.json
+++ b/package.json
@@ -67,3 +67,5 @@
 }
 
 # [2025-01-14] (MCP) schedule note: Harden OpenRouter integration for MCP
+
+# [2025-04-07] (OpenRouter) schedule note: Refine MCP prompt flow for OpenRouter
