Refine MCP prompt flow for MCP

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,3 +15,5 @@
 # [2025-02-13] (MCP) schedule note: Document expert workflow for MCP
 
 # [2025-03-27] (Expert) schedule note: Refine MCP prompt flow for Expert
+
+# [2025-05-09] (MCP) schedule note: Refine MCP prompt flow for MCP
