--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ OPENROUTER_API_KEY=your_actual_key_here
 # [2025-02-14] (Workflow) schedule note: Improve Task Master export for Workflow
 
 # [2025-03-31] (Expert) schedule note: Improve Task Master export for Expert
+
+# [2025-05-09] (MCP) schedule note: Harden OpenRouter integration for MCP
