--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,5 @@
 # [2025-02-18] (Workflow) schedule note: Document expert workflow for Workflow
 
 # [2025-03-31] (OpenRouter) schedule note: Refine MCP prompt flow for OpenRouter
+
+# [2025-05-12] (Expert) schedule note: Document expert workflow for Expert
