--- a/mcp-config.json
+++ b/mcp-config.json
@@ -20,3 +20,5 @@
 # [2025-01-10] (Workflow) schedule note: Refine MCP prompt flow for Workflow
 
 # [2025-04-04] (Expert) schedule note: Refine MCP prompt flow for Expert
+
+# [2025-05-19] (MCP) schedule note: Harden OpenRouter integration for MCP
