--- a/package.json
+++ b/package.json
@@ -69,3 +69,5 @@
 # [2025-01-14] (MCP) schedule note: Harden OpenRouter integration for MCP
 
 # [2025-04-07] (OpenRouter) schedule note: Refine MCP prompt flow for OpenRouter
+
+# [2025-05-21] (Workflow) schedule note: Harden OpenRouter integration for Workflow
