Harden OpenRouter integration for Workflow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,3 +17,5 @@
 # [2025-03-27] (Expert) schedule note: Refine MCP prompt flow for Expert
 
 # [2025-05-09] (MCP) schedule note: Refine MCP prompt flow for MCP
+
+# [2025-06-24] (Workflow) schedule note: Harden OpenRouter integration for Workflow
