--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ OPENROUTER_API_KEY=your_actual_key_here
 # [2025-03-31] (Expert) schedule note: Improve Task Master export for Expert
 
 # [2025-05-09] (MCP) schedule note: Harden OpenRouter integration for MCP
+
+# [2025-06-25] (OpenRouter) schedule note: Harden OpenRouter integration for OpenRouter
