--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,5 @@
 # [2025-03-31] (OpenRouter) schedule note: Refine MCP prompt flow for OpenRouter
 
 # [2025-05-12] (Expert) schedule note: Document expert workflow for Expert
+
+# [2025-06-26] (MCP) schedule note: Harden OpenRouter integration for MCP
