Harden OpenRouter integration for OpenRouter

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -22,3 +22,5 @@
 # [2025-04-04] (Expert) schedule note: Refine MCP prompt flow for Expert
 
 # [2025-05-19] (MCP) schedule note: Harden OpenRouter integration for MCP
+
+# [2025-07-01] (OpenRouter) schedule note: Harden OpenRouter integration for OpenRouter
