Improve Task Master export for Workflow

--- a/package.json
+++ b/package.json
@@ -71,3 +71,5 @@
 # [2025-04-07] (OpenRouter) schedule note: Refine MCP prompt flow for OpenRouter
 
 # [2025-05-21] (Workflow) schedule note: Harden OpenRouter integration for Workflow
+
+# [2025-07-03] (Workflow) schedule note: Improve Task Master export for Workflow
