--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,3 +19,5 @@
 # [2025-05-09] (MCP) schedule note: Refine MCP prompt flow for MCP
 
 # [2025-06-24] (Workflow) schedule note: Harden OpenRouter integration for Workflow
+
+# [2025-08-04] (OpenRouter) schedule note: Document expert workflow for OpenRouter
