Refine MCP prompt flow for Workflow

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ OPENROUTER_API_KEY=your_actual_key_here
 # [2025-05-09] (MCP) schedule note: Harden OpenRouter integration for MCP
 
 # [2025-06-25] (OpenRouter) schedule note: Harden OpenRouter integration for OpenRouter
+
+# [2025-08-06] (Workflow) schedule note: Refine MCP prompt flow for Workflow
