Document expert workflow for OpenRouter

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,5 @@
 # [2025-05-12] (Expert) schedule note: Document expert workflow for Expert
 
 # [2025-06-26] (MCP) schedule note: Harden OpenRouter integration for MCP
+
+# [2025-08-07] (OpenRouter) schedule note: Document expert workflow for OpenRouter
