--- a/mcp-config.json
+++ b/mcp-config.json
@@ -24,3 +24,5 @@
 # [2025-05-19] (MCP) schedule note: Harden OpenRouter integration for MCP
 
 # [2025-07-01] (OpenRouter) schedule note: Harden OpenRouter integration for OpenRouter
+
+# [2025-08-11] (OpenRouter) schedule note: Document expert workflow for OpenRouter
