--- a/package.json
+++ b/package.json
@@ -73,3 +73,5 @@
 # [2025-05-21] (Workflow) schedule note: Harden OpenRouter integration for Workflow
 
 # [2025-07-03] (Workflow) schedule note: Improve Task Master export for Workflow
+
+# [2025-08-13] (Expert) schedule note: Document expert workflow for Expert
