--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,3 +21,5 @@
 # [2025-06-24] (Workflow) schedule note: Harden OpenRouter integration for Workflow
 
 # [2025-08-04] (OpenRouter) schedule note: Document expert workflow for OpenRouter
+
+# [2025-09-19] (MCP) schedule note: Harden OpenRouter integration for MCP
