--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ OPENROUTER_API_KEY=your_actual_key_here
 # [2025-06-25] (OpenRouter) schedule note: Harden OpenRouter integration for OpenRouter
 
 # [2025-08-06] (Workflow) schedule note: Refine MCP prompt flow for Workflow
+
+# [2025-09-22] (MCP) schedule note: Improve Task Master export for MCP
