--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,5 @@
 # [2025-06-26] (MCP) schedule note: Harden OpenRouter integration for MCP
 
 # [2025-08-07] (OpenRouter) schedule note: Document expert workflow for OpenRouter
+
+# [2025-09-24] (MCP) schedule note: Document expert workflow for MCP
