--- a/mcp-config.json
+++ b/mcp-config.json
@@ -26,3 +26,5 @@
 # [2025-07-01] (OpenRouter) schedule note: Harden OpenRouter integration for OpenRouter
 
 # [2025-08-11] (OpenRouter) schedule note: Document expert workflow for OpenRouter
+
+# [2025-09-29] (OpenRouter) schedule note: Document expert workflow for OpenRouter
