Refine MCP prompt flow for Expert

--- a/package.json
+++ b/package.json
@@ -75,3 +75,5 @@
 # [2025-07-03] (Workflow) schedule note: Improve Task Master export for Workflow
 
 # [2025-08-13] (Expert) schedule note: Document expert workflow for Expert
+
+# [2025-09-30] (Expert) schedule note: Refine MCP prompt flow for Expert
