--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,3 +23,5 @@
 # [2025-08-04] (OpenRouter) schedule note: Document expert workflow for OpenRouter
 
 # [2025-09-19] (MCP) schedule note: Harden OpenRouter integration for MCP
+
+# [2025-10-29] (MCP) schedule note: Document expert workflow for MCP
