--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,3 +25,5 @@
 # [2025-09-19] (MCP) schedule note: Harden OpenRouter integration for MCP
 
 # [2025-10-29] (MCP) schedule note: Document expert workflow for MCP
+
+# [2025-10-31] (OpenRouter) schedule note: Document expert workflow for OpenRouter
